--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
@@ -93,11 +90,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Desi is a part-time high school teacher in Renggiang. She is teaching Chemistry subject to high school students in her home-town </p>
-                </div>
-                <div class="col-lg-4">
-                    <p>She studied plant protection at Bogor Agricultural University where she received her bachelor degree in science. </p>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p>Desi is a part-time high school teacher in Renggiang. She is teaching Chemistry subject to high school students in her home-town. She studied plant protection at Bogor Agricultural University where she received her bachelor degree in science. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -126,33 +120,17 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>Location</h3>
-                        <p>Bentaian<br>Beltim, Babel</p>
+                        <p>Bentaian Beltim, Babel
+						<br>Contact me for additional details
+						</p>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>About Desi</h3>
-                        <p>Desi is a part-time high school teacher based in Renggiang, Beltim </p>
+                        <p>Desi is a part-time high school teacher based in Renggiang, Beltim. 
+						 She loves reading articles about news, sciences, Islamic studies, novels, and any useful information. 
+						</p>
                     </div>
                 </div>
             </div>
