Final design as 28 November 2015

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+	<link href='img/favicon.ico' type='image/x-icon' rel='shortcut icon'/>
 
     <title>Desi Mustar</title>
 
@@ -53,11 +54,17 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+					<li class="page-scroll">
+                        <a href="#profile">Profile</a>
+                    </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
+                    </li>
+					<li class="page-scroll">
+                        <a href="http://www.desimustar.gq/blog">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +75,7 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
+        <div class="container" id='profile'>
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-profile" src="img/profile.png" alt="">
@@ -107,10 +114,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+				<div class="contact-me">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
 					<p> If you have a question or just want to say Hi, please reach me at prinss.desi@gmail.com </p>
                 </div>
+				</div>
             </div>
         </div>
     </section>
