--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p>Desi is a part-time high school teacher in Renggiang. She is teaching Chemistry subject to high school students in her home-town. She studied plant protection at Bogor Agricultural University where she received her bachelor degree in science. </p>
+                    <p>Desi is a part-time high school teacher based in Renggiang. She is teaching Chemistry course to high school students in her home-town. She studied plant protection at Bogor Agricultural University where she received her bachelor degree in science. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="http://www.desimustar.ga" class="btn btn-lg btn-outline">
