--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p>Desi is a part-time high school teacher based in Renggiang. She is teaching Chemistry course to high school students in her home-town. She studied plant protection at Bogor Agricultural University where she received her bachelor degree in science. </p>
+                    <p>Desi is a part-time high school teacher based in Simpang Renggiang. She is teaching Chemistry and Agricultural productivity courses to high school students in her home-town. She studied plant protection at Bogor Agricultural University where she received her bachelor degree in science. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="http://www.desimustar.ga" class="btn btn-lg btn-outline">
@@ -137,7 +137,7 @@
                     </div>
                     <div class="footer-col col-md-6">
                         <h3>About Desi</h3>
-                        <p>Desi is a part-time high school teacher based in Renggiang, Beltim. 
+                        <p>Desi is a part-time high school teacher based in Simpang Renggiang, Beltim. 
 						 She loves reading articles about news, sciences, Islamic studies, novels, and any useful information. 
 						</p>
                     </div>
