--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="#contact">Contact</a>
                     </li>
 					<li class="page-scroll">
-                        <a href="http://www.desimustar.gq/blog">Blog</a>
+                        <a href="http://www.desimustar.tk/blog">Blog</a>
                     </li>
                 </ul>
             </div>
